# code-assist-harness

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: agent-loop.md  architecture.md  context-engineering.md  evaluation.md  glossary.md  protocol.md  safety-model.md  tool-system.md
docs/adr/: 0001-own-the-agent-loop.md  0002-ink-python-process-boundary.md  0003-ndjson-protocol.md  0004-approval-model.md  0005-host-executor-first.md
docs/lessons/: README.md  cah-001-architecture-decisions.md  cah-002-ink-application-shell.md  cah-003-python-runtime-supervision.md  cah-004-protocol-v1.md  cah-005-mocked-streaming-session.md  cah-006-session-cancellation.md  cah-007-repository-checks.md  cah-008-documentation-standards.md  cah-009-walking-skeleton-guide.md  cah-010-session-state-reducer.md  cah-011-append-only-transcript.md  cah-020-provider-interface-and-fake.md  cah-021-one-model-turn.md  cah-022-loop-limits.md  lesson-template.md
protocol/: README.md
scripts/: run-tui
src/code_assist_harness/: __init__.py  runtime.py
tests/: test_package.py  test_runtime.py
tests/protocol/: test_codec.py  test_fixtures.py  test_models.py  test_streams.py
tui/: eslint.config.js  package-lock.json  package.json  tsconfig.json
tui/src/: app.tsx  bootstrap.ts  cli.ts  node-version.ts  protocol-stream.ts  protocol.ts  workspace.ts  (+3 more)
user-stories/: README.md  backlog.md  cah-001-record-architecture-decisions.md  cah-002-bootstrap-ink-application.md  cah-003-supervise-python-runtime.md  cah-004-define-protocol-v1.md  cah-005-stream-mocked-session.md  cah-006-cancel-active-session.md  cah-007-establish-repository-checks.md  cah-008-establish-documentation-standards.md  cah-009-document-walking-skeleton.md  cah-010-session-state-reducer.md  cah-011-append-only-transcript.md  cah-020-provider-interface-and-fake.md  cah-021-complete-one-model-turn.md  cah-022-enforce-loop-limits.md
(+52 files in other folders)
