[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-assist-harness"
version = "0.1.0"
description = "A learning-first local coding agent with an explicit Python harness core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-openai",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
