[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-assist-harness"
version = "0.1.0"
description = "A learning-first local coding agent with an explicit Python harness core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
